// Vitest Snapshot v1

exports[`renders an empty exercise 1`] = `
<div>
  <section />
</div>
`;

exports[`renders an exercise 1`] = `
<div>
  <section>
    <span
      class="sc-bcXHqe sc-hLBbgP fKOqTz WwMvq"
    >
      a
    </span>
    <span
      class="sc-bcXHqe fKOqTz"
    >
      b
    </span>
  </section>
</div>
`;

exports[`renders an exercise 2`] = `
<div>
  <section>
    <span
      class="sc-bcXHqe sc-gswNZR fKOqTz hlLNmh"
    >
      a
    </span>
    <span
      class="sc-bcXHqe sc-dkrFOg fKOqTz cOXFeh"
    >
      b
    </span>
  </section>
</div>
`;
